// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomInstallationShopifyTab/> should display the custom installation "shopify tab" when ssp is available correcty 1`] = `
<div
  className="wrapper"
>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        1
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Go under 
      <b>
        Themes
      </b>
       in your Online Store and click on
       
      <b>
        Customize
      </b>
    </div>
  </div>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        2
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Then under 
      <b>
        Theme actions
      </b>
      , click on 
      <b>
        View theme
      </b>
    </div>
  </div>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        3
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Open file 
      <b>
        theme.liquid
      </b>
       and scroll down to the bottom
    </div>
  </div>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        4
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Finally, copy the code below and paste it above the
       
      <b>
        &lt;/body&gt;
      </b>
       tag
    </div>
  </div>
  <Alert
    closeAriaLabel="Close"
    color="warning"
    fade={true}
    isOpen={true}
    tag="div"
    transition={
      Object {
        "appear": true,
        "baseClass": "fade",
        "baseClassActive": "show",
        "enter": true,
        "exit": true,
        "in": true,
        "mountOnEnter": false,
        "onEnter": [Function],
        "onEntered": [Function],
        "onEntering": [Function],
        "onExit": [Function],
        "onExited": [Function],
        "onExiting": [Function],
        "tag": "div",
        "timeout": 150,
        "unmountOnExit": true,
      }
    }
  >
    Please note that by copying the code to your Shopify
     
    <b>
      theme.liquid
    </b>
     files, the chat will also be shown on all webpages. Make sure to copy the code to just specific pages if needed.
  </Alert>
  <CodeSnippet
    code="<script>installChat();</script>"
  />
  <h4>
    Enable Self-Service
  </h4>
  <p>
    This will enable self-service on your chat but you'll be able to control the settings from the
     
    <Link
      to="/app/settings/integrations/gorgias_chat/1/self_service"
    >
      Self-Service page
    </Link>
    .
  </p>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        1
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Add this code snippet just after the installation code snippet from the previous step. Please remember to 
      <b>
        replace XXXX in the snippet below
      </b>
       with your Shopify store name
       
      <b>
        yourShop.myshopify.com
      </b>
      .
    </div>
  </div>
  <CodeSnippet
    code="<script>
var gorgiasChatInterval = window.setInterval(function() {
    if (window.GorgiasChat && GorgiasChat.hasOwnProperty(\\"on\\")) {
        GorgiasChat.setShopifyContext('your-store.myshopify.com');
        window.clearInterval(gorgiasChatInterval); // do not delete this line
    }
}, 50);
</script>"
  />
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        2
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Access your chat's
       
      <Link
        to="/app/settings/self-service"
      >
        Self-Service settings
      </Link>
       
      and activate the installation toggle for the specific Shopify store site that you want to activate the self-service portal on. If the toggle turns green and stays green, then the self-service portal is live on your site.
    </div>
  </div>
</div>
`;

exports[`<CustomInstallationShopifyTab/> should display the custom installation "shopify tab" when ssp is not available correcty 1`] = `
<div
  className="wrapper"
>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        1
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Go under 
      <b>
        Themes
      </b>
       in your Online Store and click on
       
      <b>
        Customize
      </b>
    </div>
  </div>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        2
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Then under 
      <b>
        Theme actions
      </b>
      , click on 
      <b>
        View theme
      </b>
    </div>
  </div>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        3
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Open file 
      <b>
        theme.liquid
      </b>
       and scroll down to the bottom
    </div>
  </div>
  <div
    className="instruction"
  >
    <div>
      <span
        className="instruction-number"
      >
        4
      </span>
    </div>
    <div
      className="instruction-text"
    >
      Finally, copy the code below and paste it above the
       
      <b>
        &lt;/body&gt;
      </b>
       tag
    </div>
  </div>
  <Alert
    closeAriaLabel="Close"
    color="warning"
    fade={true}
    isOpen={true}
    tag="div"
    transition={
      Object {
        "appear": true,
        "baseClass": "fade",
        "baseClassActive": "show",
        "enter": true,
        "exit": true,
        "in": true,
        "mountOnEnter": false,
        "onEnter": [Function],
        "onEntered": [Function],
        "onEntering": [Function],
        "onExit": [Function],
        "onExited": [Function],
        "onExiting": [Function],
        "tag": "div",
        "timeout": 150,
        "unmountOnExit": true,
      }
    }
  >
    Please note that by copying the code to your Shopify
     
    <b>
      theme.liquid
    </b>
     files, the chat will also be shown on all webpages. Make sure to copy the code to just specific pages if needed.
  </Alert>
  <CodeSnippet
    code="<script>installChat();</script>"
  />
  <h4>
    Enable Self-Service
  </h4>
  <p>
    This will enable self-service on your chat but you'll be able to control the settings from the
     
    <Link
      to="/app/settings/integrations/gorgias_chat/1/self_service"
    >
      Self-Service page
    </Link>
    .
  </p>
  <Alert
    closeAriaLabel="Close"
    color="warning"
    fade={true}
    isOpen={true}
    tag="div"
    transition={
      Object {
        "appear": true,
        "baseClass": "fade",
        "baseClassActive": "show",
        "enter": true,
        "exit": true,
        "in": true,
        "mountOnEnter": false,
        "onEnter": [Function],
        "onEntered": [Function],
        "onEntering": [Function],
        "onExit": [Function],
        "onExited": [Function],
        "onExiting": [Function],
        "tag": "div",
        "timeout": 150,
        "unmountOnExit": true,
      }
    }
  >
    The self-service features
     
    <b>
      are not available for custom live chat
    </b>
    . Please connect your live chat to a store in order to set-up self-service features.
  </Alert>
</div>
`;
